--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,10 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,venv
+
+# Node modules
+static/assets/node_modules
+static/.webassets-cache
+
+# Pycache
+__pycache__
