--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,11 @@ atlassian-ide-plugin.xml
 # SonarLint plugin
 .idea/sonarlint/
 
+# Data
+.idea/dataSources.xml
+
+.idea/InspectionProfiles
+
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
